--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -625,10 +625,8 @@ main {
     background-color: #8b5cf6;
     color: white;
     height: 39px;
-    padding: 0 1rem;
-    display: inline-flex;
-    align-items: center;
-    gap: 0.4rem;
+    padding: 0 1.25rem;
+    gap: 0.5rem;
 }
 
 .btn-donate:hover {
@@ -639,6 +637,8 @@ main {
 }
 
 .btn-donate svg {
+    width: 14px;
+    height: 14px;
     flex-shrink: 0;
 }
 
