--- a/layouts/donate/download.html
+++ b/layouts/donate/download.html
@@ -74,6 +74,13 @@
     color: var(--color-primary);
 }
 
+#fundraiseup-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 .content-column {
     display: flex;
     flex-direction: column;
@@ -190,14 +197,7 @@
 
                 <!-- FundraiseUp Form -->
                 <div id="fundraiseup-container">
-                    <p style="text-align: center; padding: var(--spacing-xl);">
-                        <a href="#XTKMQZHT" class="btn btn-primary" style="display: inline-block; background: var(--color-primary); color: white; padding: var(--spacing-md) var(--spacing-xl); border-radius: var(--radius-md); text-decoration: none; font-weight: 600;">
-                            {{ i18n "donatePage.donateNow" }}
-                        </a>
-                    </p>
-                    <p style="text-align: center; font-size: 0.875rem; color: var(--color-text-secondary);">
-                        {{ i18n "donatePage.clickToOpenForm" }}
-                    </p>
+                    <a href="#XTKMQZHT" style="display: none"></a>
                 </div>
             </div>
 
@@ -254,4 +254,13 @@
 <!-- Load donation page JavaScript -->
 {{ $downloadDonate := resources.Get "js/download-donate.js" | minify }}
 <script src="{{ $downloadDonate.RelPermalink }}"></script>
+
+<!-- FundraiseUp Standard Snippet - loads only on this page -->
+<script>(function(w,d,s,n,a){if(!w[n]){var l='call,catch,on,once,set,then,track'
+.split(','),i,o=function(n){return'function'==typeof n?o.l.push([arguments])&&o
+:function(){return o.l.push([n,arguments])&&o}},t=d.getElementsByTagName(s)[0],
+j=d.createElement(s);j.async=!0;j.src='https://cdn.fundraiseup.com/widget/'+a;
+t.parentNode.insertBefore(j,t);o.s=Date.now();o.v=4;o.h=w.location.href;o.l=[];
+for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
+})(window,document,'script','FundraiseUp','AAYKECHT');</script>
 {{ end }}
