--- a/layouts/downloads/downloads.html
+++ b/layouts/downloads/downloads.html
@@ -197,7 +197,7 @@
                 <p class="platform-version">v{{ .Site.Data.downloads.current_version }}</p>
                 <p class="platform-req">{{ i18n "downloads.aptRepository" }}</p>
                 <div class="platform-actions">
-                    <a href="{{ relLangURL "docs/guides/installing-i2p-on-debian-and-ubuntu" }}" class="btn btn-platform">{{ i18n "downloads.installGuide" }}</a>
+                    <a href="{{ relLangURL "docs/guides/installing-i2p-on-debian-and-ubuntu/" }}" class="btn btn-platform" data-no-intercept="true">{{ i18n "downloads.installGuide" }}</a>
                 </div>
             </div>
 
