--- a/layouts/get-involved/get-involved.html
+++ b/layouts/get-involved/get-involved.html
@@ -287,7 +287,7 @@
         <h2>{{ i18n "getInvolved.ctaTitle" }}</h2>
         <p>{{ i18n "getInvolved.ctaDescription" }}</p>
         <div class="cta-buttons">
-            <a href="{{ relLangURL "/downloads/" }}" class="btn btn-primary">{{ i18n "getInvolved.downloadI2P" }}</a>
+            <a href="{{ relLangURL "/downloads/" }}" class="btn btn-secondary">{{ i18n "getInvolved.downloadI2P" }}</a>
             <a href="{{ relLangURL "/contact/" }}" class="btn btn-secondary">{{ i18n "getInvolved.contactUs" }}</a>
         </div>
     </div>
