Enable scrolling in features widget iframe

--- a/layouts/_default/feedback.html
+++ b/layouts/_default/feedback.html
@@ -32,8 +32,8 @@
                     data-api-url="https://feedback.i2p.net"
                     data-max-items="20"
                     frameborder="0"
-                    scrolling="no"
-                    style="width: 100%; border: none; min-height: 600px;">
+                    scrolling="yes"
+                    style="width: 100%; border: none; min-height: 800px; max-height: 2000px; overflow-y: auto;">
                 </iframe>
             </div>
         </div>
