WIP: theme selector

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -610,6 +610,10 @@ main {
     justify-content: center;
     color: var(--color-text);
     transition: all var(--transition-fast);
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    text-decoration: none;
 }
 
 .theme-toggle:hover {
