fixed banner dismiss issue closes #18 ;

--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -10,12 +10,9 @@
             {{ end }}
         </div>
         {{ if .Site.Params.banner.dismissible }}
-        <form method="GET" action="/api/banner/dismiss" style="display: inline;">
-            <input type="hidden" name="id" value="{{ .Site.Params.banner.id | default "banner-default" }}">
-            <button type="submit" class="banner-close" aria-label="{{ i18n "banner.banner_close" | default "Close banner" }}" title="{{ i18n "banner.banner_close" | default "Close banner" }}">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </form>
+        <a href="/api/banner/dismiss?id={{ .Site.Params.banner.id | default "banner-default" }}" class="banner-close" aria-label="{{ i18n "banner.banner_close" | default "Close banner" }}" title="{{ i18n "banner.banner_close" | default "Close banner" }}">
+            <span aria-hidden="true">&times;</span>
+        </a>
         {{ end }}
     </div>
 </div>
