--- a/layouts/get-involved/get-involved.html
+++ b/layouts/get-involved/get-involved.html
@@ -223,7 +223,7 @@
         <!-- Translation Card -->
         <div class="contribution-card">
             <div class="card-icon">🌍</div>
-            <h3>{{ i18n "getInvolved.translation" }}</h3>
+            <h3>{{ i18n "getInvolved.translationTitle" }}</h3>
             <p>{{ i18n "getInvolved.translationDesc" }}</p>
             <div class="card-links">
                 <a href="{{ relLangURL "/get-involved/guides/translator-guide/" }}" class="card-link">{{ i18n "getInvolved.translatorsGuide" }}</a>
